tests/regress/enforce-scope.lm.out
Error: Unknown Referenced Variable
In File tests/regress/enforce-scope.lm Line 6 Column 5
a
