tests/regress/enforce-scope.lm

import LIB/default.lm;

main := λ. (: (tail(
   ()
   (match (SAtom( 'A_s )) (
      ()
      ( (SCons( a b )) () )
      ( (SAtom _) (print a) )
   ))
)) Nil);
